<resources>
    <string name="app_name">OpenWeatherMap</string>
    <string name="city_field">Enter city</string>
    <string name="get_weather">Get Weather</string>
    <string name="city">City: </string>
    <string name="temperature">Temperature: </string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="weather_condition">Weather condition:</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="condition_picture">Weather condition picture</string>
    <string name="weekly_forecast">Weekly Forecast</string>
    <string name="forecast_title">5 days forecast for</string>
    <string name="date">Date:</string>
    <string name="day">Today</string>
</resources>
