<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/forecast_title"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="28dp"
        android:text="@string/date"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginLeft="59dp" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#000"
        android:text="@string/temperature"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintStart_toStartOf="@id/date"/>

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#000"
        android:text="@string/pressure"
        app:layout_constraintStart_toStartOf="@+id/temperature"
        app:layout_constraintTop_toBottomOf="@+id/wind_speed" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#000"
        android:text="@string/humidity"
        app:layout_constraintStart_toStartOf="@+id/pressure"
        app:layout_constraintTop_toBottomOf="@+id/pressure" />

    <TextView
        android:id="@+id/weather_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#000"
        android:text="@string/weather_condition"
        app:layout_constraintStart_toStartOf="@+id/humidity"
        app:layout_constraintTop_toBottomOf="@+id/humidity" />

    <TextView
        android:id="@+id/wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#000"
        android:text="@string/wind_speed"
        app:layout_constraintStart_toStartOf="@+id/temperature"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="135dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toEndOf="@+id/pressure"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/condition_picture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="135dp"
        android:contentDescription="@string/condition_picture"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toEndOf="@+id/pressure"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>