<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    tools:context="com.example.valery.openweathermap.MainActivity">

    <Button
        android:id="@+id/get_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/get_weather"
        android:textAllCaps="false"
        android:onClick="buttonClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/city_field"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:hint="@string/city_field"
        app:layout_constraintEnd_toStartOf="@+id/get_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="50dp"
        android:text="@string/temperature"
        app:layout_constraintStart_toStartOf="@+id/city_field"
        app:layout_constraintTop_toBottomOf="@+id/city_field" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pressure"
        app:layout_constraintStart_toStartOf="@+id/temperature"
        app:layout_constraintTop_toBottomOf="@+id/wind_speed" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/humidity"
        app:layout_constraintStart_toStartOf="@+id/pressure"
        app:layout_constraintTop_toBottomOf="@+id/pressure" />

    <TextView
        android:id="@+id/weather_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/weather_condition"
        app:layout_constraintStart_toStartOf="@+id/humidity"
        app:layout_constraintTop_toBottomOf="@+id/humidity" />

    <TextView
        android:id="@+id/wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/temperature"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toEndOf="@+id/pressure"
        app:layout_constraintTop_toBottomOf="@+id/get_button" />

    <ImageView
        android:id="@+id/condition_picture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:visibility="invisible"
        android:contentDescription="@string/condition_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toEndOf="@+id/pressure"
        app:layout_constraintTop_toBottomOf="@+id/get_button" />

</android.support.constraint.ConstraintLayout>
